apps/photoprism/photoprism.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        - mountPath: /photoprism/import
          name: import
        - mountPath: /photoprism/storage
          name: storage
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: originals
        nfs:
          path: /main/plex/library/personal/originals
          server: 192.168.0.71
      - name: import
        nfs:
          path: /main/plex/library/personal/import
          server: 192.168.0.71
      - name: storage
        nfs:
          path: /main/plex/library/personal/storage
          server: 192.168.0.71
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
